[package]
name = "collections2"
description = "Traits for generic collections, such as lists, maps and sets (supports no_std)"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bbqsrc/collections"
version = "0.0.1"
edition = "2021"
rust-version = "1.65"

[dependencies]
heapless = { version = "0.9.1", optional = true }

[features]
default = ["std"]
std = ["alloc"]
alloc = ["heapless/alloc"]
heapless = ["dep:heapless"]
